tests/snapshots/tests__semicolons@complex-args.lua.snap
---
source: tests/tests.rs
expression: formatted
input_file: tests/inputs-semicolons/complex-args.lua
---
React.createElement(
	"span",
	{ key = id },
	React.createElement(Consumer, nil, function()
		return React.createElement("span", nil, "inner");
	end),
	React.createElement("span", nil, "outer")
);

