tests/snapshots/tests__semicolons@condition-parentheses.lua.snap
---
source: tests/tests.rs
expression: formatted
input_file: tests/inputs-semicolons/condition-parentheses.lua
---
if foo then
	print("true");
elseif bar then
	print("false");
end

while foo do
	print("true");
end

repeat
	print("yes");
until foo;

