tests/snapshots/tests__semicolons@do-block.lua.snap
---
source: tests/tests.rs
expression: formatted
input_file: tests/inputs-semicolons/do-block.lua
---
do
	local x = 5;
end

