tests/snapshots/tests__semicolons@empty-function.lua.snap
---
source: tests/tests.rs
expression: formatted
input_file: tests/inputs-semicolons/empty-function.lua
---
local function noop() end

function noop() end

call(function() end);

