tests/snapshots/tests__semicolons@eof-1.lua.snap
---
source: tests/tests.rs
expression: formatted
input_file: tests/inputs-semicolons/eof-1.lua
---
local x = 1;

