tests/snapshots/tests__semicolons@eof-2.lua.snap
---
source: tests/tests.rs
expression: formatted
input_file: tests/inputs-semicolons/eof-2.lua
---
local x = 1;
-- this is a comment

