tests/snapshots/tests__semicolons@eof-3.lua.snap
---
source: tests/tests.rs
expression: formatted
input_file: tests/inputs-semicolons/eof-3.lua
---
local x = 1;

-- this is a comment

